# wgpu_test

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs  main.rs  rect.rs  shader.wgsl
