[package]
name = "wgpu_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
env_logger = "0.10.0"
glyphon = "0.3.0"
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
wgpu = "0.16.1"
winit = "0.28.7"
